test/cgip/PP/error/inheritance/rep/reperr-01.err105
"Line 77 column 16
73: Identifier is undefined/not initialized"
